--- a/style.css
+++ b/style.css
@@ -5,12 +5,10 @@
 }
 
 body {
-
     font-family: "Poppins", sans-serif;
 }
 
 header {
-
     background-color: #ffffff;
     display: flex;
     flex-direction: column;
@@ -18,14 +16,9 @@ header {
     align-items: center;
     gap: 20px;
     margin-top: 20px;
-
-
 }
 
-
-
 .menu__liste {
-
     list-style: none;
     display: flex;
     flex-direction: column;
@@ -34,7 +27,6 @@ header {
 }
 
 .menu__link {
-
     text-decoration: none;
     text-transform: uppercase;
     font-weight: 600;
@@ -43,12 +35,10 @@ header {
 }
 
 .menu__span .menu__link {
-
     color: #AB864C;
 }
 
 .hero {
-
     background-image: url(img/haute-couture-2.jpg);
     height: 20rem;
     background-position: center;
@@ -62,7 +52,6 @@ header {
 }
 
 .hero__title {
-
     font-family: "Kaisei Decol", serif;
     background-color: #ffffffd2;
     height: 30%;
@@ -71,11 +60,9 @@ header {
     justify-content: center;
     align-items: center;
     font-weight: bold;
-
 }
 
 .intro {
-
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -85,11 +72,9 @@ header {
     margin-bottom: 2rem;
     font-size: 0.75rem;
     gap: 60px;
-
 }
 
 .intro__quote-container {
-
     font-family: "Kaisei Decol", serif;
     display: flex;
     flex-direction: column;
@@ -100,25 +85,19 @@ header {
 .intro__quote {
     font-size: 1.1rem;
     text-align: center;
-
 }
 
 .intro__author {
-
     font-weight: 600;
 }
 
 .intro__description {
-
     border: 1px solid #000000;
-
     font-size: 0.75rem;
     padding: 1rem;
 }
 
 .products {
-
-
     background-color: #AB864C;
     display: flex;
     flex-direction: column;
@@ -126,27 +105,20 @@ header {
     align-items: center;
     gap: 30px;
     color: #ffffff;
-
-
 }
 
-
-
 .products__title {
-
     margin-top: 4rem;
     font-family: "Kaisei Decol", serif;
     font-size: 1.3rem;
 }
 
 .card__title {
-
     font-family: "Kaisei Decol", serif;
     font-size: 1rem;
 }
 
 .card {
-
     display: flex;
     flex-direction: column;
     justify-items: center;
@@ -157,17 +129,14 @@ header {
 }
 
 .card__image {
-
     max-width: 80%;
 }
 
 .card__description {
-
     font-size: 0.75rem;
 }
 
 .products__button {
-
     background-color: #AB864C;
     border: 1px solid #ffffff;
     padding: 0.75rem;
@@ -176,10 +145,7 @@ header {
     margin-bottom: 4rem;
 }
 
-
-
 .products__link {
-
     font-family: "Poppins", sans-serif;
     text-decoration: none;
     color: #ffffff;
@@ -187,17 +153,14 @@ header {
 }
 
 .extras {
-
     margin-top: 5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
 }
 
 .extras__container {
-
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -205,24 +168,18 @@ header {
 }
 
 .extras__history {
-
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
     text-align: center;
-
 }
 
 .history__header {
-
-
     margin: 1rem;
-
 }
 
 .history__image {
-
     display: flex;
     justify-content: center;
     align-content: center;
@@ -230,13 +187,10 @@ header {
 }
 
 .history__title {
-
     font-family: "Kaisei Decol", serif;
-
 }
 
 .history__quote-symbol {
-
     display: flex;
     flex-direction: column;
     font-size: 6rem;
@@ -244,14 +198,12 @@ header {
 }
 
 .history__description {
-
     font-size: 0.75rem;
     margin: 1rem;
     text-align: left;
 }
 
 .history__button {
-
     background-color: #AB864C;
     border: 1px solid #ffffff;
     padding: 0.75rem;
@@ -261,13 +213,9 @@ header {
     flex-direction: row;
     justify-content: flex-start;
     align-items: flex-start;
-
-
-
 }
 
 .history__link {
-
     font-family: "Poppins", sans-serif;
     text-decoration: none;
     color: #ffffff;
@@ -275,7 +223,6 @@ header {
 }
 
 .form__intro {
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -285,36 +232,31 @@ header {
 }
 
 .form__container {
-
     margin: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 15px
 }
 
 .separator {
-
     display: none;
-
 }
 
 .form__title {
-
     font-family: "Kaisei Decol", serif;
     padding: 1rem;
     margin: 1rem;
     border-top: 1px solid black;
-
     width: 90%;
 }
 
 .form__text {
-
     font-size: 0.75rem;
     text-align: left;
     line-height: 1rem;
-
 }
 
 .form__list {
-
     list-style: none;
     text-align: left;
     display: flex;
@@ -323,22 +265,40 @@ header {
 }
 
 .form__label {
-
     font-size: 0.75rem;
     margin: 0;
 }
 
 .form__input__mail {
     border: 1px solid black;
-    height: 1.5rem;
-    width: 100%;
+    padding: 0.4rem;
 }
 
 .form__input__name {
-
     border: 1px solid black;
-    height: 1.5rem;
-    width: 49.2%;
+    padding: 0.4rem;
+}
+
+.form_span {
+    display: block;
+    font-size: 0.75rem;
+}
+
+.form__container__name {
+    display: flex;
+    gap: 10px
+}
+
+.form__input__name {
+    width: 100%;
+}
+
+.form__name {
+    width: 50%;
+}
+
+.form__input__mail {
+    width: 100%;
 }
 
 .form__textarea {
@@ -347,8 +307,14 @@ header {
 
 }
 
-.form__submit {
+.form_container__checkbox {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 5px
+}
 
+.form__submit {
     font-family: "Poppins", sans-serif;
     background-color: #AB864C;
     color: #ffffff;
@@ -361,7 +327,6 @@ header {
 }
 
 .location__info {
-
     background-color: #AB864C;
     text-align: center;
     display: flex;
@@ -372,16 +337,13 @@ header {
 }
 
 .location__title {
-
     font-family: "Kaisei Decol", serif;
     margin-top: 2rem;
 
 }
 
 .location__address {
-
     margin-bottom: 2rem;
-
 }
 
 .location__map {
@@ -392,7 +354,6 @@ header {
 }
 
 .footer {
-
     background-color: #000000;
     color: #ffffff;
     display: flex;
@@ -405,38 +366,30 @@ header {
 }
 
 .footer__container {
-
     display: flex;
     flex-direction: column;
     gap: 30px
 }
 
 .footer__logo {
-
     margin-top: 2rem;
-
 }
 
 .footer__list {
-
     list-style: none;
     text-align: left;
-
 }
 
 .footer__link {
-
     text-decoration: none;
     color: #ffffff;
 }
 
 .footer__span .footer__link {
-
     color: #AB864C;
 }
 
 .footer__contact {
-
     display: flex;
     flex-direction: column;
     gap: 25px;
@@ -444,8 +397,6 @@ header {
 }
 
 .footer__info {
-
-
     margin-left: 2rem;
     text-align: left;
     display: flex;
@@ -454,22 +405,18 @@ header {
 }
 
 .footer__hours {
-
     text-align: left;
     display: flex;
     flex-direction: column;
     gap: 20px;
-
 }
 
 .footer__socials {
-
     text-align: left;
     gap: 20px;
 }
 
 .footer__legal {
-
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -477,10 +424,6 @@ header {
     width: 100%;
     padding: 1rem;
 }
-
-
-
-
 
 @media (min-width: 768px) {
 
@@ -490,37 +433,30 @@ header {
     }
 
     .header__logo {
-
         margin-bottom: 20px;
         width: 10%;
     }
 
     .menu__liste {
-
         flex-direction: row;
     }
 
     .hero {
-
         background-size: 1024px;
-
     }
 
     .hero__title {
-
         height: 50%;
         font-size: 2rem;
     }
 
     .intro {
-
         gap: 0;
         margin-top: 1rem;
         margin-bottom: 0;
     }
 
     .intro__description {
-
         border: 1px solid #000000;
         font-size: 0.75rem;
         padding: 2rem;
@@ -528,19 +464,15 @@ header {
     }
 
     .card__image {
-
         max-width: 50%;
     }
 
     .card {
-
-
         margin-left: 9rem;
         margin-right: 9rem;
     }
 
     .history__image {
-
         max-width: 40%;
     }
 
@@ -549,13 +481,10 @@ header {
     }
 
     .extras {
-
         margin: 2rem;
-
     }
 
     .form__title {
-
         width: 100%;
         padding: 0;
         margin: 0;
@@ -567,79 +496,64 @@ header {
     }
 
     .separator {
-
         display: block;
         border: none;
         border-top: 1.5px solid black;
         margin: 4rem;
         width: 85%;
+    }
 
+    .form__container__name {
+        display: flex;
+        gap: 10px
     }
 
     .form__input__name {
+        width: 100%;
+    }
 
-        width: 49.6%;
+    .form__name {
+        width: 50%;
     }
 
     .location__title {
-
         font-size: 2.8rem;
     }
 
     .footer {
-
-
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 0.55rem;
+        font-size: 0.75rem;
     }
 
     .footer__container {
-
-        /* background-color: aqua; */
         margin-top: 20px;
         width: 100%;
-        display: grid;
+        display: flex;
+        flex-direction: row;
         justify-content: center;
         align-items: center;
-        align-content: center;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-        margin-left: 4rem;
-
-
     }
 
     .footer__logo {
-
         margin-top: 0rem;
-
-
     }
 
     .footer__contact {
-
         gap: 0;
-
     }
 
     .footer__info {
-
-
         margin-left: 0rem;
         gap: 10px;
-
     }
 
     .footer__hours {
-
-
         gap: 10px;
-
     }
 
     .footer__legal {
-
         flex-direction: row;
         justify-content: center;
     }
@@ -649,49 +563,38 @@ header {
 @media (min-width: 1024px) {
 
     .hero {
-
         background-size: cover;
-
     }
 
     .hero__title {
-
         width: 44%;
         height: 60%;
         font-size: 2.5rem;
-
     }
 
     .menu__liste {
-
         gap: 30px;
     }
 
     .menu__link {
-
-        font-size: 0.8rem;
+        font-size: 1rem;
     }
 
     .intro__quote {
-
         font-size: 1.5rem;
         margin-top: 2rem;
     }
 
     .intro__description {
-
         font-size: 1rem;
         margin-left: 22rem;
         margin-right: 22rem;
     }
 
     .products__title {
-
         font-size: 2.5rem;
 
     }
-
-
 
     .card__container {
 
@@ -700,19 +603,15 @@ header {
     }
 
     .card {
-
-
         margin-left: 6rem;
         margin-right: 6rem;
     }
 
     .card__image {
-
         max-width: 120%;
     }
 
     .extras__container {
-
         display: flex;
         flex-direction: row;
         margin-left: 10rem;
@@ -720,34 +619,40 @@ header {
     }
 
     .history__image {
-
         max-width: 25%;
     }
 
     .history__title {
-
         font-size: 1.5rem;
     }
 
     .history__description {
-
         font-size: 0.75rem;
         margin-right: 10rem;
     }
 
     .extras__form {
-
         display: flex;
-
     }
 
-    .form__item--fullname {
+    .form__content {
+        width: 40%;
+    }
 
+    .form__container__name {
         display: flex;
+        gap: 10px
+    }
+
+    .form__input__name {
+        width: 100%;
+    }
+
+    .form__name {
+        width: 50%;
     }
 
     .form__intro {
-
         width: 40%;
         margin-left: 10rem;
         display: flex;
@@ -756,19 +661,10 @@ header {
 
 
     .form__list {
-
-
         width: 400px;
     }
 
-    .form__input__name {
-
-        width: 49.4%;
-    }
-
-
     .footer__container {
-
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
@@ -778,7 +674,6 @@ header {
 
     .footer__legal {
         font-size: 0.8rem;
-
     }
 
 }
